<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".HomeActivity">
    <!--
        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            >
        </android.support.design.widget.AppBarLayout>
    -->

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_marginBottom="57dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:id="@+id/mosque"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:contentDescription="@string/imagedesctitle_ramadan"
                android:padding="3dp"
                android:src="@drawable/titleeid" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:orientation="horizontal">

                <!-- Toilet-->


                <ImageView
                    android:id="@+id/img_toilet"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_weight="1"
                    android:paddingRight="7dp"
                    android:paddingLeft="1dp"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:contentDescription="@string/imgdesctoilet"
                    android:src="@drawable/toilet" />
                <!-- Petrol Pump-->


                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:contentDescription="@string/imgdescpetrolpump"
                    android:layout_weight="1"
                    android:paddingLeft="7dp"
                    android:paddingRight="1dp"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:src="@drawable/petrolstation" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <!-- Pharmacy-->
                <!--   <android.support.v7.widget.CardView
                    android:contentDescription="@string/imgdescpharmacy"
                    android:layout_width="160dp"
                    android:layout_height="190dp"
                    android:layout_margin="7dp">
                </android.support.v7.widget.CardView>
                -->
                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:contentDescription="@string/imgdescpharmacy"
                    android:layout_weight="1"
                    android:paddingRight="7dp"
                    android:paddingLeft="1dp"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:src="@drawable/pharmacy" />
                <!-- Blood Bank-->


                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:contentDescription="@string/imgdescblood_bank"
                    android:paddingRight="1dp"
                    android:paddingLeft="7dp"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:layout_weight="1"
                    android:src="@drawable/bloodbank" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Post Office-->


                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_weight="1"
                    android:paddingRight="7dp"
                    android:paddingLeft="1dp"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:contentDescription="@string/imagedescpostoffice"
                    android:src="@drawable/postoffice" />


                <!-- Courier Service-->


                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:contentDescription="@string/imagedesccourierservice"
                    android:layout_weight="1"
                    android:paddingRight="1dp"
                    android:paddingLeft="7dp"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:src="@drawable/courierservice" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Govt Office-->


                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:contentDescription="@string/imagedescgovtoffice"
                    android:layout_weight="1"
                    android:paddingRight="7dp"
                    android:paddingLeft="1dp"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:src="@drawable/govtoffice" />


                <!-- Transport-->


                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:contentDescription="@string/imagedesctransport"
                    android:layout_weight="1"
                    android:paddingRight="1dp"
                    android:paddingLeft="7dp"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:src="@drawable/transport" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Emergency Call-->


                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:contentDescription="@string/imagedescemergencycall"
                    android:layout_weight="1"
                    android:paddingRight="7dp"
                    android:paddingLeft="1dp"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:src="@drawable/emergencycall" />


                <!-- Entertainment-->


                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:contentDescription="@string/imagedescentertainment"
                    android:layout_weight="1"
                    android:paddingRight="1dp"
                    android:paddingLeft="7dp"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:src="@drawable/entertainment" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Festival -->


                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:contentDescription="@string/imagedescfestival"
                    android:layout_weight="1"
                    android:paddingRight="7dp"
                    android:paddingLeft="1dp"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:src="@drawable/utsab" />


                <!-- Education-->


                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:contentDescription="@string/imagedesceducation"
                    android:layout_weight="1"
                    android:paddingRight="1dp"
                    android:paddingLeft="7dp"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:src="@drawable/education" />


            </LinearLayout>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="12dp" />


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
    <!--
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></ScrollView>


    -->



</android.support.design.widget.CoordinatorLayout>